Added the ability to create new brands and bars with validation and error handling

--- a/views/brand_detail.jade
+++ b/views/brand_detail.jade
@@ -5,4 +5,5 @@ block content
     
     p #{brand.description? brand.description: 'No description'}
 
-    a(href = brand.website) Website
+    if brand.website
+        a(href = brand.website) Website
