Added the ability to create new racks with validation and error handling

--- a/views/rack_detail.jade
+++ b/views/rack_detail.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-    h1 #{rack.brand.name} #{rack.type}
+    h1 #{rack.brand?rack.brand.name:'Unbranded'} #{rack.type}
 
     p #[strong Type:] #{rack.type}
     p #[strong Price: ] #{rack.price} $
