--- a/views/rack_detail.jade
+++ b/views/rack_detail.jade
@@ -19,4 +19,8 @@ block content
         p 
     p #[strong Safeties: ] #{rack.safeties}
     
-
+    hr
+    p
+        a(href=rack.url+'/delete') Delete Rack
+    p
+        a(href=rack.url+'/update') Update Rack
