Added the ability to delete brands

--- a/views/brand_detail.jade
+++ b/views/brand_detail.jade
@@ -7,3 +7,9 @@ block content
 
     if brand.website
         a(href = brand.website) Website
+
+    hr
+    p
+        a(href=brand.url+'/delete') Delete Brand
+    p
+        a(href=brand.url+'/update') Update Brand
