Fixed bug where the brand's website was shown escaped and therefore didn't work

--- a/views/brand_detail.jade
+++ b/views/brand_detail.jade
@@ -6,8 +6,7 @@ block content
     p #{brand.description? brand.description: 'No description'}
 
     if brand.website
-        a(href = brand.website) Website
-
+        a(href!= brand.website) Website
     hr
     p
         a(href=brand.url+'/delete') Delete Brand
